@@ -2,78 +2,80 @@ package in.backend.controller;
 
 import in.backend.dto.BookingDTO;
 import in.backend.entity.Booking;
-import in.backend.entity.Service;
 import in.backend.repository.BookingRepository;
-import in.backend.repository.ServiceRepository;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/bookings")
-@CrossOrigin(origins = "http://localhost:5173") // frontend URL
+@CrossOrigin(origins = "http://localhost:5173") // React frontend
 public class BookingController {
 
     private final BookingRepository bookingRepository;
-    private final ServiceRepository serviceRepository;
 
-    public BookingController(BookingRepository bookingRepository, ServiceRepository serviceRepository) {
+    public BookingController(BookingRepository bookingRepository) {
         this.bookingRepository = bookingRepository;
-        this.serviceRepository = serviceRepository;
     }
 
-    // ✅ Save booking form along with linked service
-    @PostMapping
-    public ResponseEntity<BookingDTO> saveBooking(@RequestBody Booking booking) {
-        if (booking.getBookedService() != null && booking.getBookedService().getId() != null) {
-            Service service = serviceRepository.findById(booking.getBookedService().getId()).orElse(null);
-            booking.setBookedService(service);
-        }
-        booking.setStatus("pending"); // default status
-        Booking savedBooking = bookingRepository.save(booking);
-        return ResponseEntity.ok(new BookingDTO(savedBooking));
-    }
-
-    // ✅ Get all bookings (optionally filter by status)
+    // ✅ Get all bookings (converted to DTO)
     @GetMapping
-    public ResponseEntity<List<BookingDTO>> getAllBookings(@RequestParam(required = false) String status) {
-        List<Booking> bookings = (status != null)
-                ? bookingRepository.findByStatus(status)
-                : bookingRepository.findAll();
-
-        List<BookingDTO> dtos = bookings.stream()
+    public List<BookingDTO> getAllBookings() {
+        return bookingRepository.findAll()
+                .stream()
                 .map(BookingDTO::new)
-                .toList();
-
-        return ResponseEntity.ok(dtos);
+                .collect(Collectors.toList());
     }
 
-    // ✅ Update booking
+    // ✅ Get single booking by ID
+    @GetMapping("/{id}")
+    public ResponseEntity<BookingDTO> getBookingById(@PathVariable Long id) {
+        return bookingRepository.findById(id)
+                .map(b -> ResponseEntity.ok(new BookingDTO(b)))
+                .orElse(ResponseEntity.notFound().build());
+    }
+
+    // ✅ Create booking
+    @PostMapping
+    public ResponseEntity<BookingDTO> createBooking(@RequestBody Booking booking) {
+        Booking saved = bookingRepository.save(booking);
+        return ResponseEntity.ok(new BookingDTO(saved));
+    }
+
+    // Update booking
     @PutMapping("/{id}")
     public ResponseEntity<BookingDTO> updateBooking(@PathVariable Long id, @RequestBody Booking updatedBooking) {
         return bookingRepository.findById(id)
-                .map(booking -> {
-                    booking.setGuests(updatedBooking.getGuests());
-                    booking.setEventDate(updatedBooking.getEventDate());
-                    booking.setEventTime(updatedBooking.getEventTime());
-                    booking.setVenue(updatedBooking.getVenue());
-                    booking.setAddress(updatedBooking.getAddress());
-                    booking.setNotes(updatedBooking.getNotes());
-                    booking.setStatus(updatedBooking.getStatus());
-                    Booking saved = bookingRepository.save(booking);
+                .map(existing -> {
+                    existing.setEventDate(updatedBooking.getEventDate());
+                    existing.setEventTime(updatedBooking.getEventTime());
+                    existing.setGuests(updatedBooking.getGuests());
+                    existing.setVenue(updatedBooking.getVenue());
+                    existing.setAddress(updatedBooking.getAddress());
+                    existing.setNotes(updatedBooking.getNotes());
+                    existing.setStatus(updatedBooking.getStatus());
+                    existing.setFullName(updatedBooking.getFullName());
+                    existing.setEmail(updatedBooking.getEmail());
+                    existing.setPhone(updatedBooking.getPhone());
+                    existing.setBookedService(updatedBooking.getBookedService());
+
+                    Booking saved = bookingRepository.save(existing);
                     return ResponseEntity.ok(new BookingDTO(saved));
                 })
                 .orElse(ResponseEntity.notFound().build());
     }
 
-    // ✅ Delete / cancel booking
+    // Delete booking
     @DeleteMapping("/{id}")
     public ResponseEntity<Void> deleteBooking(@PathVariable Long id) {
-        if (bookingRepository.existsById(id)) {
-            bookingRepository.deleteById(id);
-            return ResponseEntity.noContent().build();
-        }
-        return ResponseEntity.notFound().build();
+        return bookingRepository.findById(id)
+                .map(existing -> {
+                    bookingRepository.delete(existing);
+                    return ResponseEntity.noContent().<Void>build(); // explicitly Void
+                })
+                .orElseGet(() -> ResponseEntity.notFound().build()); // same type
     }
+
 }
